# dashboard

./: .env.example  LICENSE  README.md  pyproject.toml
src/dashboard/: app.py  collectors.py  config.py  main.py  models.py  pacman.py  pong.py  snake.py  styles.tcss
src/media_ops_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
